syntax = "proto3";

import "global.proto";
import "message/cart_dto.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 购物车服务
service CartService {
    // 批发购物车接口
    rpc WholesaleCartV1 (WsCartRequest) returns (Result) {
    }
    // 获取购物车,当购物车编号不存在时,将返回一个新的购物车
    rpc GetShoppingCart (ShoppingCartId) returns (SShoppingCart) {
    }
    // 放入购物车
    rpc PutItem(CartItemRequest) returns (CartItemResponse) {
    }
    // 从购物车里删除指定数量的商品
    rpc ReduceItem(CartItemRequest) returns (Result) {
    }
    // 勾选商品结算
    rpc CheckCart (CheckCartRequest) returns (Result) {
    }
}

// 购物车加入商品请求
message CartItemRequest {
    // 买家编号
    ShoppingCartId id = 1;
    // 商品项
    repeated RCartItem items = 2;
}

// 商品项请求参数
message RCartItem{
  //商品编号
  sint64 itemId = 1;
  //SKU编号
  sint64 skuId = 2;
  // 数量
  int32 quantity = 3;
  // 是否重置数量
  bool resetQuantity = 4;
}

message CheckCartRequest {
    ShoppingCartId id = 1;
    repeated SCheckCartItem items = 2;
}

// 购物车编号
message ShoppingCartId{
    // 会员/用户编号
    sint64 userId =  1;
    // 购物车标识,当未指定用户时候使用
    string cartCode = 2;
    // 是否为批发销售的购物车
    bool isWholesale = 3;
}

